# ROS2_Planification_and_Cognitive_Systems

./: .gitignore  README.md  apartment.pddl
.github/workflows/: main.yaml  master.yaml
ROS2_Planification_and_Cognitive_Systems/apartment_actions/: README.md
ROS2_Planification_and_Cognitive_Systems/apartment_actions/launch/: plansys2_apartment_launch.py
ROS2_Planification_and_Cognitive_Systems/blackboard/blackboard/include/blackboard/: BlackBoardInterface.hpp
ROS2_Planification_and_Cognitive_Systems/blackboard/blackboard/src/blackboard/: BlackBoardClient.cpp
ROS2_Planification_and_Cognitive_Systems/cognitive_apartment/: package.xml
ROS2_Planification_and_Cognitive_Systems/cognitive_apartment/fsm/: hfsm_cognitive_apartment.bica  hfsm_cognitive_apartment.cpp
ROS2_Planification_and_Cognitive_Systems/cognitive_apartment/pddl/: cognitive_apartment.pddl
ROS2_Planification_and_Cognitive_Systems/planning/popf/: README.md
ROS2_Planification_and_Cognitive_Systems/planning/popf/examples/: moving_problem_1.pddl  travel_problem.pddl
ROS2_Planification_and_Cognitive_Systems/scan_fake/: package.xml
apartment_actions/: CMakeLists.txt  README.md  package.xml
apartment_actions/launch/: commands  plansys2_apartment_launch.py
apartment_actions/pddl/: apartment.pddl
apartment_actions/src/: apartment_controller_node.cpp  grab_object_action_node.cpp  move_action_node.cpp  release_object_action_node.cpp
blackboard/blackboard/: CMakeLists.txt  package.xml
blackboard/blackboard/include/blackboard/: BlackBoard.hpp  BlackBoardInterface.hpp  BlackBoardNode.hpp
blackboard/blackboard/src/: blackboard_main.cpp
blackboard/blackboard/src/blackboard/: BlackBoardClient.cpp  BlackBoardNode.cpp
blackboard/blackboard/test/: CMakeLists.txt  blackboard_node_test.cpp  blackboard_test.cpp
blackboard/blackboard_msgs/: CMakeLists.txt
blackboard/blackboard_msgs/msg/: Entry.msg
blackboard/blackboard_msgs/srv/: AddEntry.srv  GetEntry.srv
cognitive_apartment/: CMakeLists.txt  README.md  package.xml
cognitive_apartment/blackboard/blackboard/include/blackboard/: BlackBoardClient.hpp
cognitive_apartment/blackboard/blackboard/src/blackboard/: BlackBoard.cpp
cognitive_apartment/blackboard/blackboard/test/: CMakeLists.txt  blackboard_node_test.cpp
cognitive_apartment/blackboard/blackboard_msgs/: CMakeLists.txt  package.xml
cognitive_apartment/config/: params.yaml
cognitive_apartment/fsm/: hfsm_cognitive_apartment.bica  hfsm_cognitive_apartment.cpp  hfsm_cognitive_apartment.hpp
cognitive_apartment/launch/: plansys2_apartment_launch.py
cognitive_apartment/params/: apartment_nav2_params.yml
cognitive_apartment/pddl/: cognitive_apartment.pddl
cognitive_apartment/src/: controller_state_machine.cpp  explore_action_node.cpp  filtro.cpp  hfsm_imp_cognitive_apartment.cpp  move_action_node.cpp  object_recognition.cpp  object_recognition.hpp  sync_node.cpp  sync_node.hpp
planning/metric-ff/: README.md
planning/metric-ff/examples/: domain-disjunctive-preconditions.pddl  domain-numeric-fluents.pddl  moving_actions_domain.pddl  travel_actions_domain.pddl  travel_domain.pddl
planning/popf/: README.md
planning/popf/examples/: moving_domain.pddl
planning/tfd/: README.md  launch_tfd.sh
plansys2_bt_apartment/: CMakeLists.txt  package.xml
plansys2_bt_apartment/behavior_trees_xml/: move .xml  transport.xml
plansys2_bt_apartment/config/: params.yml
plansys2_bt_apartment/include/plansys2_bt_apartment/behavior_tree_nodes/: Move.hpp  PickObject.hpp  PlaceObject.hpp
plansys2_bt_apartment/launch/: plansys2_bt_apartment_launch.py
plansys2_bt_apartment/pddl/: apartment_bt.pddl
plansys2_bt_apartment/src/: apartment_action_node.cpp  apartment_controller_node.cpp
plansys2_bt_apartment/src/behavior_tree_nodes/: Move.cpp  PickObject.cpp  PlaceObject.cpp
plansys2_hospital_navigation_example/: CMakeLists.txt  package.xml
scan_fake/: CMakeLists.txt  laserScan_pub.cpp  laserScan_pub.hpp  package.xml
scan_fake/src/: node_scan_laser.cpp
scan_fake/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scan_fake/src/log/: latest_build
