<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_bt_apartment</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="p.castellanos.2018@alumnos.urjc.es">pabs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_bt_actions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
